# claude-sidecar

./: CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  check-auth.sh  install.sh  rebuild.sh  tui.sh
assets/: claude-md-block.md  sidecar-redirect.py
src/: config.rs  error.rs  job.rs  lib.rs  logger.rs  main.rs  pty.rs
src/routes/: browser.rs  exec.rs  health.rs  jobs.rs  mod.rs
src/tui/: app.rs  client.rs  ui.rs
